<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="MainActivity">

    <RelativeLayout
        android:id="@+id/layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginBottom="@dimen/textView_marginBottom"
                    android:layout_marginEnd="@dimen/textView_margin_border"
                    android:layout_marginStart="@dimen/textView_margin_side"
                    android:layout_marginTop="@dimen/textView_marginTop"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/teamA_textView"
                    android:textColor="@color/laker"
                    android:textSize="@dimen/textFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/display_textView_margin"
                    android:layout_marginEnd="@dimen/textView_margin_border"
                    android:layout_marginStart="@dimen/textView_margin_side"
                    android:fontFamily="sans-serif-dark"
                    android:gravity="center"
                    android:text="@string/textView_reset"
                    android:textColor="@color/gswYellow"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textView_marginBottom"
                    android:layout_marginEnd="@dimen/button_margin_border"
                    android:layout_marginStart="@dimen/button_margin_side"
                    android:backgroundTint="@color/laker"
                    android:onClick="addThreeForTeamA"
                    android:text="@string/three"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/buttonFontSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/textView_marginBottom"
                    android:layout_marginEnd="@dimen/button_margin_border"
                    android:layout_marginStart="@dimen/button_margin_side"
                    android:backgroundTint="@color/laker"
                    android:onClick="addTwoForTeamA"
                    android:text="@string/two"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/buttonFontSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/button_margin_border"
                    android:layout_marginStart="@dimen/button_margin_side"
                    android:backgroundTint="@color/laker"
                    android:onClick="foulForTeamA"
                    android:text="@string/foul"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/buttonFontSize" />

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginEnd="@dimen/textView_margin_border"
                    android:layout_marginStart="@dimen/textView_margin_side"
                    android:layout_marginTop="@dimen/display_textView_margin"
                    android:fontFamily="sans-serif-dark"
                    android:gravity="center"
                    android:text="@string/textView_reset"
                    android:textColor="@color/gswYellow"
                    android:textSize="@dimen/scoreTextSize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/textView_marginBottom"
                    android:layout_marginEnd="@dimen/textView_margin_side"
                    android:layout_marginStart="@dimen/textView_margin_border"
                    android:layout_marginTop="@dimen/textView_marginTop"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:text="@string/teamB_textView"
                    android:textColor="@color/gswBlue"
                    android:textSize="@dimen/textFontSize"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/display_textView_margin"
                    android:layout_marginEnd="@dimen/textView_margin_side"
                    android:layout_marginStart="@dimen/textView_margin_border"
                    android:fontFamily="sans-serif-dark"
                    android:gravity="center"
                    android:text="@string/textView_reset"
                    android:textColor="@color/gswBlueDark"
                    android:textSize="@dimen/scoreTextSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:layout_marginEnd="@dimen/button_margin_side"
                    android:layout_marginStart="@dimen/button_margin_border"
                    android:backgroundTint="@color/gswBlue"
                    android:gravity="center"
                    android:onClick="addThreeForTeamB"
                    android:text="@string/three"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonFontSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginBottom="@dimen/button_margin_bottom"
                    android:layout_marginEnd="@dimen/button_margin_side"
                    android:layout_marginStart="@dimen/button_margin_border"
                    android:backgroundTint="@color/gswBlue"
                    android:gravity="center"
                    android:onClick="addTwoForTeamB"
                    android:text="@string/two"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonFontSize" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="@dimen/button_margin_side"
                    android:layout_marginStart="@dimen/button_margin_border"
                    android:backgroundTint="@color/gswBlue"
                    android:gravity="center"
                    android:onClick="foulForTeamB"
                    android:text="@string/foul"
                    android:textColor="@color/white"
                    android:textSize="@dimen/buttonFontSize" />

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/textView_margin_side"
                    android:layout_marginStart="@dimen/textView_margin_border"
                    android:layout_marginTop="@dimen/display_textView_margin"
                    android:fontFamily="sans-serif-dark"
                    android:gravity="center"
                    android:text="@string/textView_reset"
                    android:textColor="@color/gswBlueDark"
                    android:textSize="@dimen/scoreTextSize" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/img_2"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/layout_1"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/imageView_margin"
            android:layout_marginEnd="@dimen/imageView_margin_side"
            android:layout_marginTop="@dimen/imageView_margin"
            android:contentDescription="@string/logo_3"
            android:src="@drawable/logo_5" />

        <ImageView
            android:id="@+id/img_1"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_1"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/imageView_margin"
            android:layout_marginStart="@dimen/imageView_margin_side"
            android:layout_marginTop="@dimen/imageView_margin"
            android:contentDescription="@string/logo_2"
            android:src="@drawable/logo_1" />

        <TextView
            android:id="@+id/vs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/versusMargin"
            android:fontFamily="sans-serif-dark"
            android:gravity="center"
            android:text="@string/versus_textView"
            android:textColor="@color/redDark"
            android:textSize="@dimen/versusTextSize" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="false"
            android:layout_below="@+id/layout_1"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/resetMargin"
            android:layout_toEndOf="@id/img_1"
            android:layout_toStartOf="@+id/img_2"
            android:background="@color/darkRed"
            android:gravity="center"
            android:onClick="resetScore"
            android:text="@string/reset_button"
            android:textColor="@color/white"
            android:textSize="@dimen/resetTextSize" />

        <ImageView
            android:id="@+id/img_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/logo_1"
            android:scaleType="center"
            android:src="@drawable/nba_1" />

        <Button
            android:id="@+id/btnShowToast_1"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/layout_1"
            android:layout_gravity="start"
            android:layout_marginBottom="@dimen/imageView_margin"
            android:layout_marginStart="@dimen/imageView_margin_side"
            android:layout_marginTop="@dimen/imageView_margin_side"
            android:background="@null"
            android:textColor="#048dc9" />

        <Button
            android:id="@+id/btnShowToast_2"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/layout_1"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/imageView_margin"
            android:layout_marginEnd="@dimen/imageView_margin_side"
            android:layout_marginTop="@dimen/imageView_margin_side"
            android:background="@null"
            android:textColor="#048dc9" />
    </RelativeLayout>
</ScrollView>